--- a/mpx/pubspec.yaml
+++ b/mpx/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase_core: ^4.2.1
+  http: ^1.2.0
+  url_launcher: ^6.2.5
+  shared_preferences: ^2.2.2
+  flutter_svg: ^2.0.10+1
+  uni_links: ^0.5.1
 
 dev_dependencies:
   flutter_test:
@@ -59,9 +64,17 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/icons/sun.svg
+    - assets/icons/cloud.svg
+    - assets/icons/cloud_rain.svg
+    - assets/icons/cloud_sun.svg
+    - assets/icons/sad.svg
+    - assets/icons/cloud-01.svg
+    - assets/icons/cloud-raining-01.svg
+    - assets/icons/cloud-raining-02.svg
+    - assets/icons/cloud-sun-01.svg
+    - assets/icons/cloud-sun-02.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
