--- a/mpx/pubspec.yaml
+++ b/mpx/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   shared_preferences: ^2.2.2
   flutter_svg: ^2.0.10+1
   uni_links: ^0.5.1
+  provider: ^6.1.5+1
 
 dev_dependencies:
   flutter_test:
