--- a/mpx/pubspec.yaml
+++ b/mpx/pubspec.yaml
@@ -31,6 +31,11 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_localizations:
+    sdk: flutter
+
+  intl: ^0.20.2
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -41,10 +46,14 @@ dependencies:
   flutter_svg: ^2.0.10+1
   uni_links: ^0.5.1
   provider: ^6.1.5+1
+  flutter_gen: ^5.12.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mockito: ^5.4.0
+  build_runner: ^2.4.6
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -62,7 +71,9 @@ flutter:
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
+  generate: true
   uses-material-design: true
+
 
   # To add assets to your application, add an assets section, like this:
   assets:
@@ -76,6 +87,13 @@ flutter:
     - assets/icons/cloud-raining-02.svg
     - assets/icons/cloud-sun-01.svg
     - assets/icons/cloud-sun-02.svg
+
+  # localization:
+  #   arb-dir: lib/l10n
+  #   template-arb-file: app_en.arb
+  #   output-localization-file: app_localizations.dart
+  #   output-class: AppLocalizations
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
